@@ -1,3 +1,8 @@
+2016-09-13  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/77553
+	* g++.dg/cpp1y/constexpr-77553.C: New test.
+
 2016-09-13  David Malcolm  <dmalcolm@redhat.com>
 
 	* gcc.dg/plugin/diagnostic_plugin_test_show_locus.c
